@startuml
entity GeneTypeLookup {
    gene_type_id number
    gene_type varchar2
}

entity Gene {
    gene_id varchar2
    gene_type_id number
}

entity Orthology {
    gene1_id varchar2
    gene2_id varchar2
}

entity SyntheticLethality {
    gene1_id varchar2
    gene2_id varchar2
    score number
}

entity EssentialGenes {
    gene_id varchar2
}

GeneTypeLookup ||--|{ Gene
Gene ||-l-o{ Orthology : "gene 1"
Gene ||--o{ Orthology : "gene 2"
Gene ||-r-o{ SyntheticLethality : "gene 1"
Gene ||--o{ SyntheticLethality : "gene 2"
Gene ||--o| EssentialGenes

@enduml